<resources>
	<string name="app_name">简租</string>
	<string name="disp_at_first_launch">first_launch</string>
	<string name="houseinfo_act_tiltle">房屋详情</string>
	<string name="houseinfo_description_tiltle">房屋描述标题</string>
	<string name="houseinfo_rent_price">租金：</string>
	<string name="houseinfo_price">价格：</string>
	<string name="houseinfo_yuan_per_month">元/月</string>
	<string name="houseinfo_pay_3_save_1">(付3押1)</string>
	<string name="houseinfo_rent_type_whole">(整租)</string>
	<string name="houseinfo_house_area">面积：</string>
	<string name="houseinfo_house_paint">装修：</string>
	<string name="houseinfo_house_area_square_meter">平方米</string>
	<string name="houseinfo_house_area_square_meter_pingmi">平米</string>
	<string name="houseinfo_house_orientation">朝向：</string>
	<string name="houseinfo_floor_level">楼层：</string>
	<string name="houseinfo_house_type">户型：</string>
	<string name="houseinfo_house_property_type">类型：</string>
	<string name="houseinfo_release">发布：</string>
	<string name="houseinfo_address">地址：</string>
	<string name="houseinfo_see_phone">看电话</string>
	<string name="houseinfo_see_phone_dialog_content">亲，您还没有进行实名认证哦，请您实名认证后再来看电话吧（＾-＾）</string>
	<string name="houseinfo_see_phone_dialog_content_has_reg">亲，为了避免上当受骗，请尽量选择在线支付</string>
	<string name="ershou_i_wanna_sell">我要卖</string>
	<string name="ershou_i_wanna_buy">我要买</string>
	<string name="ershou_tuijian">精品推荐</string>
	<string name="ershou_jiadian">家电</string>
	<string name="ershou_xiaojiadian">小家电</string>
	<string name="ershou_furniture">家具</string>
	<string name="ershou_bed_thing">床上用品</string>
	<string name="main_map_sousuo">地图搜索</string>
	<string name="houseinfo_gaikuang">房源概况</string>
	<string name="houseinfo_peizhi">房间配置</string>
	<string name="houseinfo_zhaopian">室内实拍</string>
	<string name="houseinfo_video">实拍视频</string>
	<string name="houseinfo_pay_online">在线支付</string>
	<string name="main_normal_vip">普通会员</string>
	<string name="main_house_mgr">房屋管家</string>
	<string name="main_left_menu_txt_1">整租</string>
	<string name="main_left_menu_txt_2">合租</string>
	<string name="main_left_menu_txt_3">私人订制</string>
	<string name="main_left_menu_txt_4">共享房屋</string>
	<string name="main_left_menu_txt_5">全程代理</string>
	<string name="main_left_menu_txt_6">二手买卖</string>
	<string name="main_left_menu_txt_7">租金垫付</string>
	<string name="main_left_menu_txt_8">房租理财</string>
	<string name="main_toolbar_ad_txt">房租理财</string>
	<string name="main_left_menu_txt_9">房源发布</string>
	<string name="main_left_menu_txt_10">房屋管家</string>
	<string name="main_left_list_1">订单</string>
	<string name="main_left_list_2">钱包</string>
	<string name="main_left_list_3">客服</string>
	<string name="main_left_list_4">设置</string>
	<string name="login_username">用户名</string>
	<string name="login_password">密码</string>
	<string name="login_login">登录</string>
	<string name="regist_name">姓名</string>
	<string name="regist_your_real_name">您的真实姓名</string>
	<string name="regist_phone_num">手机号</string>
	<string name="regist_id_num">身份证号</string>
	<string name="regist_real_id_num">请输入您的真实身份证号</string>
	<string name="sell_input_your_title">标题 醒目的标题更容易吸引买家哦</string>
	<string name="house_input_your_title">标题 建议输入房子所在小区</string>
	<string name="house_input_your_xiaoqu">输入小区名称</string>
	<string name="sell_input_your_description">描述一下您要发布的宝贝\n\n描述一下宝贝来源，新旧程度，型号/尺码等，可以让宝贝更快卖出哦</string>
	<string name="house_input_your_description">描述一下您要发布的房屋\n\n描述一下价格是否可以商议，是否允许租房者自行添置家具等，方便租房者更清楚的了解您的房屋</string>
	<string name="sell_input_your_img">宝贝照片</string>
	<string name="house_input_your_video">房屋视频\n请务必保证视频真实性，平台稍候会进行审核</string>
	<string name="house_input_your_address">您的房屋所在详细位置</string>
	<string name="house_jibenxinxi">基本信息</string>
	<string name="house_zujinxiangqing">租金详情</string>
	<string name="house_lianxiren">联系人</string>
	<string name="house_please_input_your_name">联系人</string>
	<string name="house_sir">先生</string>
	<string name="house_lady">女生</string>
	<string name="house_shoujihaoma">手机号码</string>
	<string name="house_louhao">楼号</string>
	<string name="house_danyuanhao">单元号</string>
	<string name="house_menpaihao">门牌号</string>
	<string name="house_mianji">面积</string>
	<string name="house_tingshi">厅室</string>
	<string name="house_chaoxiang">朝向</string>
	<string name="house_louceng">楼层</string>
	<string name="house_please_input">请填写</string>
	<string name="house_please_select">请选择</string>
	<string name="sell_release_now">立即发布</string>
	<string name="house_release_now">立即发布</string>
	<string name="error_code">错误代码：</string>
	<string name="please_check_net">请检查网络</string>
	<string name="load_error">加载失败</string>
	<string name="please_wait">请稍等</string>
	<string name="login_ing">正在登录</string>
	<string name="id_invalidate_please_login_again">身份验证过期，请重新登录</string>
	<string name="content_no_empty">内容不能为空</string>
	<string name="complete">完成</string>
	<string name="change_success">修改成功</string>
	<string name="change_fail">修改失败</string>
	<string name="set_success">设置成功</string>
	<string name="set_fail">设置失败</string>
	<string name="save">保存</string>
	<string name="save_success">保存成功</string>
	<string name="save_fail">保存失败</string>
	<string name="cancel">取消</string>
	<string name="sure">确定</string>
	<string name="sure_with_count">确定(%1$d)</string>
	<string name="sure_funny">朕知道了</string>
	<string name="login">登录</string>
	<string name="register">注册</string>
	<string name="login_error">登录失败</string>
	<string name="phone_format_error">手机格式有误</string>
	<string name="phone_not_empty">手机号不能为空</string>
	<string name="password_not_empty">密码不能为空</string>
	<string name="nickname_not_empty">昵称不能为空</string>
	<string name="vertify_code_not_empty">验证码不能为空</string>
	<string name="disconnect_server">服务器找不到了，请检查网络连接</string>
	<string name="nickname">昵称</string>
	<string name="password">密码</string>
	<string name="area">国家/地区</string>
	<string name="verification_code">验证码</string>
	<string name="phone_not_available">手机号不可用</string>
	<string name="send_code_error">发送验证码失败</string>
	<string name="vertify_code_error">验证码有误</string>
	<string name="send_code_btn_normal_tip">发送验证码</string>
	<string name="register_error">注册出错</string>
	<string name="message">消息</string>
	<string name="contacts">通讯录</string>
	<string name="discovery">发现</string>
	<string name="me">我</string>
	<string name="message_n">消息</string>
	<string name="contacts_n">好友</string>
	<string name="discovery_n">探索</string>
	<string name="me_n">我的</string>
	<string name="draft">[草稿]</string>
	<string name="picture">图片</string>
	<string name="voice">语音</string>
	<string name="sticker">贴图</string>
	<string name="video">视频</string>
	<string name="set_conversation_to_top">置顶聊天</string>
	<string name="cancel_conversation_to_top">取消置顶</string>
	<string name="delete_conversation">删除该聊天</string>
	<string name="new_friend">新的朋友</string>
	<string name="group_cheat">群聊</string>
	<string name="group_tag">标签</string>
	<string name="group_public_number">公众号</string>
	<string name="load_contacts_error">加载联系人失败</string>
	<string name="count_of_contacts">%1$d位联系人</string>
	<string name="friend_cicle">朋友圈</string>
	<string name="scan">扫一扫</string>
	<string name="shake">摇一摇</string>
	<string name="people_nearby">附近的人</string>
	<string name="shopping">购物</string>
	<string name="game">游戏</string>
	<string name="game_right">一起探索未知奥秘吧</string>
	<string name="so_like_biao">超级像啊！</string>
	<string name="my_biaobiao">我的超级课程表</string>
	<string name="my_chat_account">:%1$s</string>
	<string name="album">相册</string>
	<string name="collection">收藏</string>
	<string name="wallet">钱包</string>
	<string name="card_package">卡包</string>
	<string name="jian_shu">简书</string>
	<string name="csdn">CSDN</string>
	<string name="oschina">码云</string>
	<string name="github">GitHub</string>
	<string name="emotion">表情</string>
	<string name="setting">设置</string>
	<string name="qr_code_card_tip"></string>
	<string name="header_pic">头像</string>
	<string name="wechat_account">樂微信号</string>
	<string name="qr_code_card">二维码名片</string>
	<string name="my_location">我的地址</string>
	<string name="gender">性别</string>
	<string name="not_fill">未填写</string>
	<string name="add_friend">添加朋友</string>
	<string name="no_recommend_friend">还没有推荐的朋友</string>
	<string name="no_recommend_friend_tip"></string>
	<string name="add_phone_contact">添加手机联系人</string>
	<string name="wechat_qq_phone">号/QQ号/手机号</string>
	<string name="agree_friend_fail">同意添加好友失败</string>
	<string name="create_group">发起群聊</string>
	<string name="scan_one_scan">扫一扫</string>
	<string name="payment_received">收付款</string>
	<string name="help_feedback">帮助与反馈</string>
	<string name="my_wechat_account">:</string>
	<string name="radar_add_friend">雷达加朋友</string>
	<string name="add_near_friend">添加身边的朋友</string>
	<string name="create_group_face_to_face">面对面建群</string>
	<string name="create_group_with_near_friend">与身边的朋友进入同一个群聊</string>
	<string name="scan_qr_code_business_card">扫描二维码名片</string>
	<string name="phone_contacts">手机联系人</string>
	<string name="add_friend_from_contact">添加或邀请通讯录中的朋友</string>
	<string name="public_number">公众号</string>
	<string name="get_more_info_and_service">获取更多资讯和服务</string>
	<string name="scan_code">扫码</string>
	<string name="cover">封面</string>
	<string name="street_scape">街景</string>
	<string name="translate">翻译</string>
	<string name="qr_cord_or_bar_code">二维码/条码</string>
	<string name="cover_or_movie_poster">封面/电影海报</string>
	<string name="select_qr_code_from_ablum">从相册选取二维码</string>
	<string name="scan_fail">扫描失败</string>
	<string name="open_camera_error">打开相机出错</string>
	<string name="this_account_was_your_friend">该用户已经是您的好友</string>
	<string name="you_already_in_this_group">您已经在群聊中</string>
	<string name="select_group_info_fail_please_restart_app">已加入群聊，但查询群信息失败，</string>
	<string name="join_group_fail">入群失败</string>
	<string name="user_no_found">该用户不存在</string>
	<string name="search_colon">搜索:</string>
	<string name="search">搜索</string>
	<string name="nickname_colon">昵称:%1$s</string>
	<string name="set_alias_and_tag">设置备注和标签</string>
	<string name="signature">个性签名</string>
	<string name="send_message">发消息</string>
	<string name="add_to_contact">添加到通讯录</string>
	<string name="add_to_black_list">加入黑名单</string>
	<string name="delete">删除</string>
	<string name="add_to_desktop">添加到桌面</string>
	<string name="change_my_name_tip">好名字可以让你的朋友 更容易记住你。</string>
	<string name="delete_contact">删除联系人</string>
	<string name="delete_contact_content">将联系人%1$s删除，将同时删除与该联系人的聊天记录</string>
	<string name="delete_success">删除成功</string>
	<string name="delete_fail">删除失败</string>
	<string name="save_to_phone">保存到手机</string>
	<string name="alias">备注名</string>
	<string name="tag">标签</string>
	<string name="add_tag_to_classfy_contacts">添加标签对联系人进行分类</string>
	<string name="phone_number">电话号码</string>
	<string name="add_phone_number">添加电话号码</string>
	<string name="describe">描述</string>
	<string name="add_picture">附加图片</string>
	<string name="add_business_card_or_pic">添加名片或相关图片</string>
	<string name="alias_no_empty">备注名不能为空</string>
	<string name="postscript_tip">你需要发送验证申请，等对方通过</string>
	<string name="disallow_it_see_my_circle">不让他(她)看我的朋友圈</string>
	<string name="send">发送</string>
	<string name="rquest_sent_success">请求已发送</string>
	<string name="rquest_sent_fail">请求发送失败</string>
	<string name="please_to_talk">按住 说话</string>
	<string name="shot">拍摄</string>
	<string name="location">位置</string>
	<string name="red_pack">红包</string>
	<string name="wx_red_pack"></string>
	<string name="file_out_of_date">文件已过期</string>
	<string name="SET_TEXT_TYPING_TITLE">对方正在输入</string>
	<string name="SET_VOICE_TYPING_TITLE">对方正在讲话</string>
	<string name="voice_rec">手指上滑，取消发送</string>
	<string name="voice_cancel">松开手指，取消发送</string>
	<string name="voice_short">录音时间太短</string>
	<string name="voice_failure">录音失败！</string>
	<string name="signature_upload_sig_sure">确认发布</string>
	<string name="signature_upload_sig_please_input_name">请输入您的姓名</string>
	<string name="signature_upload_sig_please_input_description">这么潇洒的签名，说点什么吧  &#8230;</string>
</resources>