<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	>

	<!-- appbar(required) -->
	<include
		layout="@layout/include_toolbar_white"
		/>

	<!-- 表单项目 -->

	<!-- 姓名 -->
	<com.zhy.autolayout.AutoLinearLayout
		android:layout_width="match_parent"
		android:layout_height="90px"
		android:gravity="center_vertical"
		android:orientation="horizontal"
		android:paddingLeft="30px"
		android:paddingRight="30px"
		android:background="@color/white"
		>

		<TextView
			android:layout_width="120px"
			android:layout_height="wrap_content"
			android:text="@string/regist_name"
			android:textColor="@color/black0"
			android:textSize="28px"/>

		<EditText
			android:id="@+id/et_name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@null"
			android:hint="@string/regist_your_real_name"
			android:inputType="phone"
			android:text=""
			android:textColorHint="@color/gray3"
			android:textSize="28px"/>

	</com.zhy.autolayout.AutoLinearLayout>

	<!-- 手机号 -->
	<com.zhy.autolayout.AutoLinearLayout
		android:layout_width="match_parent"
		android:layout_height="90px"
		android:gravity="center_vertical"
		android:orientation="horizontal"
		android:paddingLeft="30px"
		android:paddingRight="30px"
		android:background="@color/white"
		>

		<TextView
			android:layout_width="120px"
			android:layout_height="wrap_content"
			android:text="@string/regist_phone_num"
			android:textColor="@color/black0"
			android:textSize="28px"/>

		<EditText
			android:id="@+id/et_phone_num"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@null"
			android:hint=""
			android:inputType="phone"
			android:text=""
			android:textColorHint="@color/gray3"
			android:textSize="28px"/>

	</com.zhy.autolayout.AutoLinearLayout>

	<!-- 身份证号 -->
	<com.zhy.autolayout.AutoLinearLayout
		android:layout_width="match_parent"
		android:layout_height="90px"
		android:gravity="center_vertical"
		android:orientation="horizontal"
		android:paddingLeft="30px"
		android:paddingRight="30px"
		android:background="@color/white"
		>

		<TextView
			android:layout_width="120px"
			android:layout_height="wrap_content"
			android:text="@string/regist_id_num"
			android:textColor="@color/black0"
			android:textSize="28px"/>

		<EditText
			android:id="@+id/et_id_num"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@null"
			android:hint="@string/regist_real_id_num"
			android:inputType="phone"
			android:textColorHint="@color/gray3"
			android:textSize="28px"/>

	</com.zhy.autolayout.AutoLinearLayout>

</com.zhy.autolayout.AutoLinearLayout>
